--- a/视频处理脚本/上传备份脚本配置文件.conf
+++ b/视频处理脚本/上传备份脚本配置文件.conf
@@ -1,10 +1,22 @@
+# 是否执行上传备份脚本（true/false）
+ENABLE_UPLOAD=true
+
+# 是否启用上传备份脚本中视频压制（true/false）
+ENABLE_DANMAKU_OVERLAY=true
+
+# 是否启用上传备份脚本中 rclone 网盘备份（true/false）
+ENABLE_RCLONE_UPLOAD=true
+
+# 每天定时执行上传备份脚本的时间（24小时制，例如 02:00）
+SCHEDULE_SLEEP_TIME="02:00"
+
 # 服务器名称
 server_name="甲骨文-1-debian12-1"
 
 # 设置视频源文件夹路径，会处理设置目录中的的文件夹里的视频，不会处理设置目录中的视频
 source_folders=(
-  "${source_backup}/biliup/video"
-  "${source_backup}/录播姬/video"
+  "/rec/biliup/video"
+  "/rec/录播姬/video"
   # 可以继续添加其它目录
 )
 
@@ -18,4 +30,4 @@ update_servers=(
 )
 
 # 上传用的 cookies 文件路径
-biliup-rs_up_cookies="/rec/cookies/bilibili/cookies-烦心事远离.json"
+biliuprs_up_cookies="/rec/cookies/bilibili/cookies-烦心事远离.json"
