优化配置文件格式

--- a/视频处理脚本/上传备份脚本配置文件.conf
+++ b/视频处理脚本/上传备份脚本配置文件.conf
@@ -1,8 +1,24 @@
 # 是否执行上传备份脚本（true/false）
-ENABLE_UPLOAD=true
+ENABLE_UPLOAD=false
+
+# ===============================
+# 以下配置仅在执行上传备份脚本时才生效
+# ===============================
+
+# 服务器名称
+server_name="甲骨文-1-debian12-1"
+
+# 设置onedrive网盘
+rclone_onedrive_config="onedrive-video-5"
+
+# 需要上传视频文件的录制平台。录播姬或者biliup，可以为多个
+update_servers=(
+  "biliup"
+  #"录播姬"
+)
 
 # 是否启用上传备份脚本中视频压制（true/false）
-ENABLE_DANMAKU_OVERLAY=true
+ENABLE_DANMAKU_OVERLAY=true 
 
 # 是否启用上传备份脚本中biliup视频投稿（true/false）
 ENABLE_UPLOAD=true
@@ -13,23 +29,11 @@ ENABLE_RCLONE_UPLOAD=true
 # 每天定时执行上传备份脚本的时间（24小时制，例如 02:00）
 SCHEDULE_SLEEP_TIME="02:00"
 
-# 服务器名称
-server_name="甲骨文-1-debian12-1"
-
 # 设置视频源文件夹路径，会处理设置目录中的的文件夹里的视频，不会处理设置目录中的视频
 source_folders=(
   "/rec/biliup/video"
   "/rec/录播姬/video"
   # 可以继续添加其它目录
-)
-
-# 设置onedrive网盘
-rclone_onedrive_config="onedrive-video-5"
-
-# 需要上传视频文件的录制平台。录播姬或者biliup，可以为多个
-update_servers=(
-  "biliup"
-  #"录播姬"
 )
 
 # 上传用的 cookies 文件路径
