--- a/视频处理脚本/上传备份脚本配置文件.conf
+++ b/视频处理脚本/上传备份脚本配置文件.conf
@@ -18,7 +18,10 @@ update_servers=(
 )
 
 # 是否启用上传备份脚本中视频压制（true/false）
-ENABLE_DANMAKU_OVERLAY=true 
+ENABLE_DANMAKU_OVERLAY=true
+
+# 是否启用上传备份脚本中投稿视频（true/false）
+ENABLE_UPLOAD=true
 
 # 是否启用上传备份脚本中 rclone 网盘备份（true/false）
 ENABLE_RCLONE_UPLOAD=true
