修改配置文件bug

--- a/视频处理脚本/上传备份脚本配置文件.conf
+++ b/视频处理脚本/上传备份脚本配置文件.conf
@@ -1,5 +1,5 @@
 # 是否执行上传备份脚本（true/false）
-ENABLE_UPLOAD=false
+ENABLE_UPLOAD_SCRIPT=false
 
 # ===============================
 # 以下配置仅在执行上传备份脚本时才生效
@@ -21,7 +21,7 @@ update_servers=(
 ENABLE_DANMAKU_OVERLAY=true
 
 # 是否启用上传备份脚本中投稿视频（true/false）
-ENABLE_UPLOAD=true
+ENABLE_VIDEO_UPLOAD=true
 
 # 是否启用上传备份脚本中 rclone 网盘备份（true/false）
 ENABLE_RCLONE_UPLOAD=true
