优化弹幕透明度和高能进度条样式

--- a/视频处理脚本/上传备份脚本配置文件.conf
+++ b/视频处理脚本/上传备份脚本配置文件.conf
@@ -38,3 +38,6 @@ source_folders=(
 
 # 上传用的 cookies 文件路径
 biliuprs_up_cookies="/rec/cookies/bilibili/cookies-烦心事远离.json"
+
+# DanmakuFactory转换xml文件为ass文件时的透明度（1-255，255为不透明）
+DanmakuFactory_opacity=155
