优化配置文件

--- a/视频处理脚本/上传备份脚本配置文件.conf
+++ b/视频处理脚本/上传备份脚本配置文件.conf
@@ -6,7 +6,7 @@ ENABLE_UPLOAD_SCRIPT=false
 # ===============================
 
 # 服务器名称
-server_name="甲骨文-1-debian12-1"
+server_name="甲骨文-1-debian-1"
 
 # 设置onedrive网盘
 rclone_onedrive_config="onedrive-video-5"
